# assinafy-scraper

./: .coverage  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  PLAN_CORRECOES_PENDENTES.md  README.md  adicionar_signatarios.py  assinafy  assinafy_cli.py  automatizar_assinatura.py  enviar_link_assinatura.py  enviar_relatorio.py  explore_signers.py  pyproject.toml  relatorio_testes_e2e.html  relatorio_testes_e2e.md  test_api_assinatura.py  test_e2e.py  test_upload_assinatura.py  test_upload_assinatura_v2.py  test_upload_pdf.py
assinafy/: assinafy_cli.py  cli.py  config.py  logging_config.py
assinafy/api/: client.py  documents.py
assinafy/automation/: email.py  signature.py
assinafy_e2e.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
config/: default.yaml.example
data/: assinafy_api.json
docs/: arquitetura.md  fluxo_documentos_assinafy.md  migracao_cli.md  resumo_fases_4_6.md
scripts/: scrape_cmux.sh
src/: cli.py
src/output/: json_writer.py
src/scraper/: base.py  extractor.py  models.py  parsers.py
tests/: conftest.py  test_cli.py  test_config.py  test_logging.py
