[project]
name = "assinafy-e2e"
version = "0.2.0"
requires-python = ">=3.9"
dependencies = [
    "requests>=2.31.0",
    "python-dotenv>=1.0.0",
    "weasyprint>=66.0",
    "click>=8.1.0",
    "pyyaml>=6.0.0",
]

[project.scripts]
assinafy = "assinafy.cli:cli"

[tool.setuptools.packages.find]
include = ["assinafy*"]
exclude = ["data*", "config*", "tests*"]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "ruff>=0.1.0",
]
package = true

[tool.black]
line-length = 100
target-version = ["py39"]

[tool.ruff]
line-length = 100
target-version = "py39"
